--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
- <div class="hero">
+ <div class="main">
     <header>
         <div class="About-header">
           <nav class="navbar navbar-expand-lg">
