--- a/press.html
+++ b/press.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 <body>
- <div class="hero">
+ <div class="main">
     <header>
         <div class="About-header">
           <nav class="navbar navbar-expand-lg">
@@ -57,8 +57,8 @@
     </header>
      <!--end of header section-->
      
-     <!--Hero sectiion-->
-     <div class="about-section">
+     <!--press sectiion-->
+     <div class="press-section">
         <div class="container">
             <div class="row mt-5">
                 <div class="col-lg-3">
