--- a/index.html
+++ b/index.html
@@ -6,20 +6,25 @@
     <meta property="og:description" content="About me">
     <title>DR. CHIBUSOR OKOCHA, Ph.D</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assest/css/style.css">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <!-- <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon"> -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="./assest/css/style.css">
 </head>
 <body>
  <div class="main">
-    <header>
+    <header class="py-3" style="border-bottom: 1px solid #cdc7c7;">
         <div class="About-header">
           <nav class="navbar navbar-expand-lg">
-          <div class="container">
+          <div class="container-fluid">
             <!-- Offcanvas toggle button -->
+            <h1 class="heading fs-2 d-block d-md-none">CHIBUSOR OKOCHA</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-            <span class="navbar-toggler-icon fw-bold align-item-end"><i class="bi bi-border-width"></i></span>
+            <span class="navbar-toggler-icon fw-bold align-item-end">
+              <!-- <i class="bi bi-border-width"></i> -->
+            </span>
             </button>
+            
             <!-- Offcanvas menu --> 
             <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
               <div class="offcanvas-header">
@@ -32,7 +37,7 @@
                     <a class="nav-link scrollto" href="#">Chibusor Okocha, Ph.D.</a>
                 </li>
               </ul>
-            <ul class="navbar-nav  _details">
+            <ul class="navbar-nav _details m-auto">
               <li class="nav-item">
                 <a class="nav-link scrollto" href="publications.html">Publications</a>
               </li>
@@ -59,34 +64,61 @@
      
      <!--Hero sectiion-->
      <div class="about-section">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row mt-5">
-                <div class="col-lg-3">
-                    <div class="justify-content-center">
-                    <img src="" alt="">
-                    <h5 class="fw-bold">Chibusor Okocha</h5>
-                    <p class="fs-5">Human-centered AI Researcher and AI Governance Expert</p>
-                    </div>
-                    <ul class="social-icons">
-                        <li><i class="bi bi-balloon-fill" aria-hidden="true"></i> Washington, D.C.</li>
-                        <li><a href="#"><i class="bi bi-balloon-fill"aria-hidden="true"></i>ResearchGate</a></li>
-                        <li><a href="#"><i class="fab bi bi-twitter-x" aria-hidden="true"></i> Twitter</a></li>
-                        <li><a href="#"><i class="fab bi bi-facebook" aria-hidden="true"></i> Facebook</a></li> 
-                        <li><a href="#"><i class="fab bi bi-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
-                        <li><a href="#"><i class="fab bi bi-instagram" aria-hidden="true"></i> Instagram</a></li>
-                        <li><a href="#"><i class="fab bi bi-github" aria-hidden="true"></i> Github</a></li>
-                        <li><a href="#"><i class=" bi bi-mortarboard-fill"></i> Google Scholar</a></li>
-                        <li><a href=""><i class="ai ai-orcid-square ai-fw"></i> ORCID</a></li>
+              <div class="d-flex justify-content-between align-item-center d-block d-md-none">
+                <div class="w-25">
+                  <img src="./assest/chibuzor.jpeg" class="img-fluid rounded-lg-4" alt="">
+                  </div>
+                <div class="ms-2">
+                  <h6 style="line-height: 1em;">Chibuzor Okocha</h6>
+                  <p class="fs-5 _0text1">Human-centered AI Researcher and AI Governance Expert</p>
+                  <!-- <span class="fw-bold mt-3">Chibusor Okocha</span> -->
+                </div>
+                <div class="">
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                      Follow
+                    </button>
+                    <ul class="dropdown-menu p-3 social-icons" aria-labelledby="dropdownMenuButton1">
+                      <li><a href="#"><i class="fa-brands fa-researchgate text-success"aria-hidden="true"></i> <span class="ms-1">ResearchGate</span> </a></li>
+                      <li class="mt-1"><a href="#"><i class="fab bi bi-twitter-x text-dark" aria-hidden="true"></i> <span class="ms-1">Twitter</span></a></li>   
+                      <li class="mt-1"><a href="#"><i class="fab bi bi-facebook text-primary" aria-hidden="true"></i><span class="ms-1">Facebook</span> </a></li> 
+                      <li class="mt-1"><a href="#"><i class="fab bi bi-linkedin" aria-hidden="true" style="color: #0A66C2;"></i><span class="ms-1">LinkedIn</span> </a></li>
+                      <li class="mt-1"><a href="#"><i class="fab bi bi-instagram" aria-hidden="true" style="color: #E1306C;"></i> <span class="ms-1">Instagram</span></a></li>
+                      <li class="mt-1"><a href="#"><i class="fab bi bi-github text-dark" aria-hidden="true"></i> <span class="ms-1">Github</span> </a></li>
+                      <!-- <li class="mt-1"><a href="#"><i class=" bi bi-mortarboard-fill text-dark"></i><span class="ms-1"> Google Scholar</span></a></li> -->
+                  </ul>
+                  </div>
+                </div>
+              </div>
+                <div class="col-lg-2 d-md-block d-none">
+                  <img src="./assest/chibuzor.jpeg" class="img-fluid rounded-lg-4" alt="">
+                  <h6 class="mt-2" style="line-height: 1em;">Chibuzor Okocha</h6>
+                  <p class="fs-5 _0text1">Human-centered AI Researcher and AI Governance Expert</p>
+                    <ul class="social-icons p-0">
+                        <li><i class="bi bi-geo" aria-hidden="true"></i> Washington, D.C.</li>
+                        <li class="mt-1"><a href="#"><i class="fa-brands fa-researchgate text-success"aria-hidden="true"></i> <span class="ms-1">ResearchGate</span> </a></li>
+                        <li class="mt-1"><a href="#"><i class="fab bi bi-twitter-x text-dark" aria-hidden="true"></i> <span class="ms-1">Twitter</span></a></li>
+                        <li class="mt-1"><a href="#"><i class="fab bi bi-facebook text-primary" aria-hidden="true"></i><span class="ms-1">Facebook</span> </a></li> 
+                        <li class="mt-1"><a href="#"><i class="fab bi bi-linkedin" aria-hidden="true" style="color: #0A66C2;"></i><span class="ms-1">LinkedIn</span> </a></li>
+                        <li class="mt-1"><a href="#"><i class="fab bi bi-instagram" aria-hidden="true" style="color: #E1306C;"></i> <span class="ms-1">Instagram</span></a></li>
+                        <li class="mt-1"><a href="#"><i class="fab bi bi-github text-dark" aria-hidden="true"></i> <span class="ms-1">Github</span> </a></li>
+                        <li class="mt-1"><a href="#"><i class=" bi bi-mortarboard-fill text-dark"></i><span class="ms-1"> Google Scholar</span></a></li>
+                        <!-- <li><a href=""><i class="ai ai-orcid-square ai-fw"></i> ORCID</a></li> -->
                     </ul>
                 </div>
-                <div class="col lg-9">
-                    <h2>About</h2>
-                    <p>I am a Fellow in the <a href="#">Center for Technology Innovation</a> at The Brookings Institution and a recent Ph.D. graduate from the Department of Computer Science at Cornell University. At Cornell, my research leveraged ethnographic methods to understand how frontline healthcare workers in rural India perceive and value AI and analyzed how AI explainability can meet the needs of novice technology users in the Global South. My work has been published at top-tier venues in HCI and sociotechnical computing (ACM CHI, CSCW, and COMPASS). I have also been recognized as a <a href="#">Trailblazer in Engineering</a>, a <a href="#">Rising Star in Management Science & Engineering</a>, and one of <a href="#">100 Brilliant Women in AI Ethics™</a>.                  </p>
-                    <p>At Brookings, my research continues to explore the promise of human-centered AI in the Global South by examining how African governments can enable effective AI governance, investigating the impact on data work in the Global South, and analyzing datafication and algorithmic marginalization in Africa. My general research interests include AI governance & policy, AI literacy, human-centered AI, explainable AI, data economies, African development, and global health. My work has been supported by The National GEM Consortium, Oracle Corporation, NANOG, Google, and the National Science Foundation and covered in venues like VICE, Bloomberg, Newsweek, The Washington Post, and VentureBeat, amongst others. I have been invited to share my work at industry research labs, including Google Research India, Microsoft Research India, and the Microsoft Africa Research Institute (MARI).
+                <div class="col-lg-1">
+
+                </div>
+                <div class="col-lg-8">
+                    <h2 class="mt-md-0 mt-4">About</h2>
+                    <p class="_0text2">I am a Fellow in the <a href="#">Center for Technology Innovation</a> at The Brookings Institution and a recent Ph.D. graduate from the Department of Computer Science at Cornell University. At Cornell, my research leveraged ethnographic methods to understand how frontline healthcare workers in rural India perceive and value AI and analyzed how AI explainability can meet the needs of novice technology users in the Global South. My work has been published at top-tier venues in HCI and sociotechnical computing (ACM CHI, CSCW, and COMPASS). I have also been recognized as a <a href="#">Trailblazer in Engineering</a>, a <a href="#">Rising Star in Management Science & Engineering</a>, and one of <a href="#">100 Brilliant Women in AI Ethics™</a>.                  </p>
+                    <p class="_0text2">At Brookings, my research continues to explore the promise of human-centered AI in the Global South by examining how African governments can enable effective AI governance, investigating the impact on data work in the Global South, and analyzing datafication and algorithmic marginalization in Africa. My general research interests include AI governance & policy, AI literacy, human-centered AI, explainable AI, data economies, African development, and global health. My work has been supported by The National GEM Consortium, Oracle Corporation, NANOG, Google, and the National Science Foundation and covered in venues like VICE, Bloomberg, Newsweek, The Washington Post, and VentureBeat, amongst others. I have been invited to share my work at industry research labs, including Google Research India, Microsoft Research India, and the Microsoft Africa Research Institute (MARI).
                     </p>
-                    <p>I hold a Bachelor’s degree in Computer Science from Pomona College, a Master’s degree in Computer Science from Cornell University, and a Ph.D. in Computer Science from Cornell University. Aside from my work at Brookings, I also serve as a Consulting Expert with the African Union, an Ethics Advisor to the Equiano Institute, an Expert Contributing Writer to the International AI Safety Report, a member of the IEEE Standards Association working group on algorithmic bias, and a contributing member of the ACM US Technology Policy Committee.
+                    <p class="_0text2">I hold a Bachelor’s degree in Computer Science from Pomona College, a Master’s degree in Computer Science from Cornell University, and a Ph.D. in Computer Science from Cornell University. Aside from my work at Brookings, I also serve as a Consulting Expert with the African Union, an Ethics Advisor to the Equiano Institute, an Expert Contributing Writer to the International AI Safety Report, a member of the IEEE Standards Association working group on algorithmic bias, and a contributing member of the ACM US Technology Policy Committee.
                     </p> 
-                    <p>I’m open to media requests, invited talks, panels, consulting projects, invitations to advisory boards/committees, and other relevant opportunities. For inquiries, please refer to the guidance listed in my <a href="#">Media Kit</a> and use the contact form on my Brookings <a href="#">web page</a>.
+                    <p class="_0text2">I’m open to media requests, invited talks, panels, consulting projects, invitations to advisory boards/committees, and other relevant opportunities. For inquiries, please refer to the guidance listed in my <a href="#">Media Kit</a> and use the contact form on my Brookings <a href="#">web page</a>.
                     </p>    
                      </div>
             </div>
@@ -94,9 +126,33 @@
      </div>
    </div>
    <div class="page__footer">
-    <footer> <!-- start custom footer --> 
-        <a href="/sitemap/">Sitemap</a> 
-        <!-- end custom footer -->
+    <footer class="py-4">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="col-lg-12">
+            <div class="page__footer-follow">
+              <ul class="social-icons2 px-0">
+                  <li><strong>Follow:</strong></li>
+                  <li><a href="#"><i class="fab bi bi-github" aria-hidden="true"></i> GitHub</a></li>
+                  <li><a href="#"><i class="fa bi bi-rss-square" aria-hidden="true"></i> Feed</a></li>
+              </ul>
+              <div class="page__footer-copyright">© 2024 Chibuzor Okocha, Ph.D.. Powered by
+                <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; 
+                <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of 
+                <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.
+           </div> 
+          </div>
+          </div>
+          <!-- <div class="col-lg-3">
+            <div class="page__footer-copyright">© 2024 Chinasa T. Okolo, Ph.D.. Powered by
+              <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; 
+              <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of 
+              <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.
+         </div> 
+          </div> -->
+        </div>
+      </div>
+        <!-- <a href="./sitemap/">Sitemap</a> 
          <div class="page__footer-follow">
             <ul class="social-icons">
                 <li><strong>Follow:</strong></li>
@@ -108,7 +164,7 @@
              <a href="http://jekyllrb.com" rel="nofollow">Jekyll</a> &amp; 
              <a href="https://github.com/academicpages/academicpages.github.io">AcademicPages</a>, a fork of 
              <a href="https://mademistakes.com/work/minimal-mistakes-jekyll-theme/" rel="nofollow">Minimal Mistakes</a>.
-        </div>
+        </div> -->
     </footer>
    </div>
 
