--- a/publications.html
+++ b/publications.html
@@ -12,49 +12,53 @@
 </head>
 <body>
  <div class="main">
-    <header>
-        <div class="About-header">
-          <nav class="navbar navbar-expand-lg">
-          <div class="container">
-            <!-- Offcanvas toggle button -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-            <span class="navbar-toggler-icon fw-bold align-item-end"><i class="bi bi-border-width"></i></span>
-            </button>
-            <!-- Offcanvas menu --> 
-            <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-              <div class="offcanvas-header">
-              <div class="offcanvas-title" id="offcanvasNavbarLabel"><h1 class="heading fs-2">CHIBUSOR OKOCHA</h1></i></div>
-               <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-             </div>
-            <div class="offcanvas-body">
-               <ul class="navbar-nav details">
-                <li class="nav-item fw-bold">
-                    <a class="nav-link scrollto" href="index.html">Chibusor Okocha, Ph.D.</a>
-                </li>
-              </ul>
-            <ul class="navbar-nav  _details">
-              <li class="nav-item">
-                <a class="nav-link scrollto" href="publications.html">Publications</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link scrollto" href="talk.html">Talks</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link scrollto" href="press.html">Press</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link scrollto" href="honor.html">Awards and Honors</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link scrollto" href="contact.html">Contact</a>
-              </li>
-             </ul>
-          </div>
-        </div>
-          </div>
-         </nav>    
-       </div>
-     </header>
+  <header class="py-3" style="border-bottom: 1px solid #cdc7c7;">
+    <div class="About-header">
+      <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <!-- Offcanvas toggle button -->
+        <h1 class="heading fs-2 d-block d-md-none">CHIBUSOR OKOCHA</h1>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <span class="navbar-toggler-icon fw-bold align-item-end">
+          <!-- <i class="bi bi-border-width"></i> -->
+        </span>
+        </button>
+        
+        <!-- Offcanvas menu --> 
+        <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header">
+          <div class="offcanvas-title" id="offcanvasNavbarLabel"><h1 class="heading fs-2">CHIBUSOR OKOCHA</h1></i></div>
+           <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+         </div>
+        <div class="offcanvas-body">
+           <ul class="navbar-nav details">
+            <li class="nav-item fw-bold">
+                <a class="nav-link scrollto" href="#">Chibusor Okocha, Ph.D.</a>
+            </li>
+          </ul>
+        <ul class="navbar-nav _details m-auto">
+          <li class="nav-item">
+            <a class="nav-link scrollto" href="publications.html">Publications</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link scrollto" href="talk.html">Talks</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link scrollto" href="press.html">Press</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link scrollto" href="honor.html">Awards and Honors</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link scrollto" href="contact.html">Contact</a>
+          </li>
+         </ul>
+      </div>
+    </div>
+      </div>
+     </nav>    
+   </div>
+ </header>
      <!--end of header section-->
      
      <!--publication sectiion-->
