--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
               </div>
                 <div class="col-lg-2 d-md-block d-none ps-4">
-                  <img src="./assest/chibuzor.jpeg" class="img-fluid rounded-lg-4" alt="">
+                  <img src="./assest/chibuzor.jpeg" class="img-fluid rounded-4" alt="">
                   <h6 class="mt-2" style="line-height: 1em;">Chibuzor Okocha</h6>
                   <p class="fs-5 _0text1">Human-centered AI Researcher and AI Governance Expert</p>
                     <ul class="social-icons p-0">
