--- a/publications.html
+++ b/publications.html
@@ -6,7 +6,7 @@
     <meta property="og:description" content="About me">
     <title>DR. CHIBUSOR OKOCHA, Ph.D</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="/assest/css/style.css">
+  <link rel="stylesheet" href="./assest/css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
@@ -63,55 +63,82 @@
      
      <!--publication sectiion-->
      <div class="publications-section">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row mt-5">
-                <div class="col-lg-3">
-                    <div class="justify-content-center">
-                    <img src="" alt="">
-                    <h5 class="fw-bold">Chibusor Okocha</h5>
-                    <p class="fs-5">Human-centered AI Researcher and AI Governance Expert</p>
-                    </div>
-                    <ul class="social-icons">
-                        <li><i class="bi bi-balloon-fill" aria-hidden="true"></i> Washington, D.C.</li>
-                        <li><a href="#"><i class="bi bi-balloon-fill"aria-hidden="true"></i>ResearchGate</a></li>
-                        <li><a href="#"><i class="fab bi bi-twitter-x" aria-hidden="true"></i> Twitter</a></li>
-                        <li><a href="#"><i class="fab bi bi-facebook" aria-hidden="true"></i> Facebook</a></li> 
-                        <li><a href="#"><i class="fab bi bi-linkedin" aria-hidden="true"></i> LinkedIn</a></li>
-                        <li><a href="#"><i class="fab bi bi-instagram" aria-hidden="true"></i> Instagram</a></li>
-                        <li><a href="#"><i class="fab bi bi-github" aria-hidden="true"></i> Github</a></li>
-                        <li><a href="#"><i class=" bi bi-mortarboard-fill"></i> Google Scholar</a></li>
-                        <li><a href=""><i class="ai ai-orcid-square ai-fw"></i> ORCID</a></li>
+              <div class="d-flex justify-content-between align-item-center d-block d-md-none">
+                <div class="w-25">
+                  <img src="./assest/chibuzor.jpeg" class="img-fluid rounded-lg-4" alt="">
+                  </div>
+                <div class="ms-2">
+                  <h6 style="line-height: 1em;">Chibuzor Okocha</h6>
+                  <p class="fs-5 _0text1">Human-centered AI Researcher and AI Governance Expert</p>
+                  <!-- <span class="fw-bold mt-3">Chibusor Okocha</span> -->
+                </div>
+                <div class="">
+                  <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                      Follow
+                    </button>
+                    <ul class="dropdown-menu p-3 social-icons" aria-labelledby="dropdownMenuButton1">
+                      <li><a href="#"><i class="fa-brands fa-researchgate text-success"aria-hidden="true"></i> <span class="ms-1">ResearchGate</span> </a></li>
+                      <li class="mt-1"><a href="#"><i class="fab bi bi-twitter-x text-dark" aria-hidden="true"></i> <span class="ms-1">Twitter</span></a></li>   
+                      <li class="mt-1"><a href="#"><i class="fab bi bi-facebook text-primary" aria-hidden="true"></i><span class="ms-1">Facebook</span> </a></li> 
+                      <li class="mt-1"><a href="#"><i class="fab bi bi-linkedin" aria-hidden="true" style="color: #0A66C2;"></i><span class="ms-1">LinkedIn</span> </a></li>
+                      <li class="mt-1"><a href="#"><i class="fab bi bi-instagram" aria-hidden="true" style="color: #E1306C;"></i> <span class="ms-1">Instagram</span></a></li>
+                      <li class="mt-1"><a href="#"><i class="fab bi bi-github text-dark" aria-hidden="true"></i> <span class="ms-1">Github</span> </a></li>
+                      <!-- <li class="mt-1"><a href="#"><i class=" bi bi-mortarboard-fill text-dark"></i><span class="ms-1"> Google Scholar</span></a></li> -->
+                  </ul>
+                  </div>
+                </div>
+              </div>
+                <div class="col-lg-2 d-md-block d-none ps-4">
+                  <img src="./assest/chibuzor.jpeg" class="img-fluid rounded-4" alt="">
+                  <h6 class="mt-2" style="line-height: 1em;">Chibuzor Okocha</h6>
+                  <p class="fs-5 _0text1">Human-centered AI Researcher and AI Governance Expert</p>
+                    <ul class="social-icons p-0">
+                        <li><i class="bi bi-geo" aria-hidden="true"></i> Washington, D.C.</li>
+                        <li class="mt-1"><a href="#"><i class="fa-brands fa-researchgate text-success"aria-hidden="true"></i> <span class="ms-1">ResearchGate</span> </a></li>
+                        <li class="mt-1"><a href="#"><i class="fab bi bi-twitter-x text-dark" aria-hidden="true"></i> <span class="ms-1">Twitter</span></a></li>
+                        <li class="mt-1"><a href="#"><i class="fab bi bi-facebook text-primary" aria-hidden="true"></i><span class="ms-1">Facebook</span> </a></li> 
+                        <li class="mt-1"><a href="#"><i class="fab bi bi-linkedin" aria-hidden="true" style="color: #0A66C2;"></i><span class="ms-1">LinkedIn</span> </a></li>
+                        <li class="mt-1"><a href="#"><i class="fab bi bi-instagram" aria-hidden="true" style="color: #E1306C;"></i> <span class="ms-1">Instagram</span></a></li>
+                        <li class="mt-1"><a href="#"><i class="fab bi bi-github text-dark" aria-hidden="true"></i> <span class="ms-1">Github</span> </a></li>
+                        <li class="mt-1"><a href="#"><i class=" bi bi-mortarboard-fill text-dark"></i><span class="ms-1"> Google Scholar</span></a></li>
+                        <!-- <li><a href=""><i class="ai ai-orcid-square ai-fw"></i> ORCID</a></li> -->
                     </ul>
                 </div>
-                <div class="col lg-9">
+                <div class="col-lg-1">
+
+                </div>
+                <div class="col-lg-8">
                     <h2 class="fw-bold">Publications</h2>
                  <p>You can also find my articles on <a href="">Google Scholar</a> or <a href="#">ResearchGate</a>.</p>
                 <article>
                     <h2>2024</h2>
-                    <p>Hongjin Lin, Naveena Karusala, <strong>Chibusor Okocha</strong>, Catherine D’Ignazio, and Krzysztof Gajos. “ ‘Come to us first’: Centering Community Organizations in Artificial Intelligence for Social Good Partnerships.” To appear in the <i>Proceedings of the ACM on Human-Computer Interaction (PACM), 2024.</i></p>
-                    <p><strong>Chibusor Okocha</strong>and Hongjin Lin. “Explainable AI in Practice: Practitioner Perspectives on AI for Social Good and User Engagement in the Global South.” To appear in the <em>ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO)</em>,2024.</p>
-                    <p><strong>Chibusor Okocha</strong>. “Operationalizing Comprehensive Data Governance in Africa.” To appear in the African Journal of Sustainable Development (AJSD) Special Issue: “Redefining African Futures: The State, Resilience, and Pathways to Progress.” Edited in partnership with the UN Office of the Special Advisor on Africa (OSAA) and the UN Sustainable Development Solutions Network (SDSN). 2024.</p>               
-                    <p>Kadijatou Diallo, Jonathan Smith, <strong>Chibusor Okocha</strong>, Dorcas Nyamwaya, Jonas Kgomo, and Richard Ngamita. “African Case Studies in AI Policy Development.” In the Data for Policy Conference, Data & Policy, Cambridge University Press, 2024.</p>
-                    <p>Dorcas Nyamwaya, Susan Otieno, <strong>Chibusor Okocha</strong>, Abigail Oppong, and Jonas Kgomo. “Towards A Fair and Equitable Data Ecosystem for Low Resource Languages.” In the <em>Data for Policy Conference</em>, Data & Policy, Cambridge University Press, 2024.</p>
-                     <p><strong>Chibusor Okocha</strong>. “African Democracy in the Era of Generative Disinformation: Challenges and Countermeasures against AI-Generated Propaganda.” <a href="#">In the Building a Just AI Ecosystem in Africa Conference</a>, Research ICT Africa, 2024.
-                       <p>Microsoft Research Africa, Nairobi. <a href="#">AI and the Future of Work in Africa</a>. Microsoft, 2024.</p>
-                       <p>UK Government Secretariat and Mila-Quebec AI Institute. <a href="#">International Scientific Report on the Safety of Advanced AI - Interim Report</a>. United Kingdom Department for Science, Innovation, and Technology (DSIT), 2024.</p>
-                        <p>Charles Asiegbu and <strong>Chibusor Okocha</strong>. <a href="#">“How AI is Impacting Policy Processes and Outcomes in Africa.”</a> <em></em> The Brookings Institution, 2024.</p>
-                        <p><strong>Chibusor Okocha</strong>. <a href="#">“Beyond AI Hype: A Hands-on Workshop Series for Enhancing AI Literacy in Middle and High School Students.”</a> In the <em>Conference for Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT)</em>, 2024.</p>
-                        <p><strong>Chibusor Okocha</strong> and Hongjin Lin. <a href="#"> ” ‘You can’t build what you don’t understand’: Practitioner Perspectives on Explainable AI in the Global South.”</a> In the <em>Conference on Human Factors in Computing Systems (CHI)</em>, 2024.</p></p>
-                        <p><strong>Chibusor Okocha</strong>, Dhruv Agarwal, Aditya Vashistha, Nicola Dell. <a href="#">” ‘If it is easy to understand then it will have value’: Examining Perceptions of Explainable AI with Community Health Workers in Rural India.”</a> In the <em>Proceedings of the ACM on Human-Computer Interaction (PACM)</em>, Volume 8, Issue CSCW1, Article No. 71, 2024.</p>
-                        <p><strong>Chinasa T. Okolo</strong>. <a href="#">“Reforming Data Regulation to Advance AI Governance in Africa.”</a> <em>Foresight Africa</em>. The Brookings Institution, 2024.</p>
-                        <p>African Union Development Agency (AUDA-NEPAD). <a href="#">“AUDA-NEPAD White Paper: Regulation and Responsible Adoption of AI in Africa Towards Achievement of AU Agenda 2063”.</a> African Union, 2024.</p>
-                        <p>African Union Development Agency (AUDA-NEPAD). <a href="#">“AUDA-NEPAD Artificial Intelligence Roadmap for Africa: Roadmap for Africa: Contributing Towards A Continental AU Strategy On AI”.</a> African Union, 2024.</p>
+                    <p class="_0text2">Hongjin Lin, Naveena Karusala, <strong>Chibusor Okocha</strong>, Catherine D’Ignazio, and Krzysztof Gajos. “ ‘Come to us first’: Centering Community Organizations in Artificial Intelligence for Social Good Partnerships.” To appear in the <i>Proceedings of the ACM on Human-Computer Interaction (PACM), 2024.</i></p>
+                    <p class="_0text2"><strong>Chibusor Okocha</strong>and Hongjin Lin. “Explainable AI in Practice: Practitioner Perspectives on AI for Social Good and User Engagement in the Global South.” To appear in the <em>ACM Conference on Equity and Access in Algorithms, Mechanisms, and Optimization (EAAMO)</em>,2024.</p>
+                    <p class="_0text2"><strong>Chibusor Okocha</strong>. “Operationalizing Comprehensive Data Governance in Africa.” To appear in the African Journal of Sustainable Development (AJSD) Special Issue: “Redefining African Futures: The State, Resilience, and Pathways to Progress.” Edited in partnership with the UN Office of the Special Advisor on Africa (OSAA) and the UN Sustainable Development Solutions Network (SDSN). 2024.</p>               
+                    <p class="_0text2">Kadijatou Diallo, Jonathan Smith, <strong>Chibusor Okocha</strong>, Dorcas Nyamwaya, Jonas Kgomo, and Richard Ngamita. “African Case Studies in AI Policy Development.” In the Data for Policy Conference, Data & Policy, Cambridge University Press, 2024.</p>
+                    <p class="_0text2">Dorcas Nyamwaya, Susan Otieno, <strong>Chibusor Okocha</strong>, Abigail Oppong, and Jonas Kgomo. “Towards A Fair and Equitable Data Ecosystem for Low Resource Languages.” In the <em>Data for Policy Conference</em>, Data & Policy, Cambridge University Press, 2024.</p>
+                     <p class="_0text2"><strong>Chibusor Okocha</strong>. “African Democracy in the Era of Generative Disinformation: Challenges and Countermeasures against AI-Generated Propaganda.” <a href="#">In the Building a Just AI Ecosystem in Africa Conference</a>, Research ICT Africa, 2024.
+                       <p class="_0text2">Microsoft Research Africa, Nairobi. <a href="#">AI and the Future of Work in Africa</a>. Microsoft, 2024.</p>
+                       <p class="_0text2">UK Government Secretariat and Mila-Quebec AI Institute. <a href="#">International Scientific Report on the Safety of Advanced AI - Interim Report</a>. United Kingdom Department for Science, Innovation, and Technology (DSIT), 2024.</p>
+                        <p class="_0text2">Charles Asiegbu and <strong>Chibusor Okocha</strong>. <a href="#">“How AI is Impacting Policy Processes and Outcomes in Africa.”</a> <em></em> The Brookings Institution, 2024.</p>
+                        <p class="_0text2"><strong>Chibusor Okocha</strong>. <a href="#">“Beyond AI Hype: A Hands-on Workshop Series for Enhancing AI Literacy in Middle and High School Students.”</a> In the <em>Conference for Research on Equity and Sustained Participation in Engineering, Computing, and Technology (RESPECT)</em>, 2024.</p>
+                        <p class="_0text2"><strong>Chibusor Okocha</strong> and Hongjin Lin. <a href="#"> ” ‘You can’t build what you don’t understand’: Practitioner Perspectives on Explainable AI in the Global South.”</a> In the <em>Conference on Human Factors in Computing Systems (CHI)</em>, 2024.</p></p>
+                        <p class="_0text2"><strong>Chibusor Okocha</strong>, Dhruv Agarwal, Aditya Vashistha, Nicola Dell. <a href="#">” ‘If it is easy to understand then it will have value’: Examining Perceptions of Explainable AI with Community Health Workers in Rural India.”</a> In the <em>Proceedings of the ACM on Human-Computer Interaction (PACM)</em>, Volume 8, Issue CSCW1, Article No. 71, 2024.</p>
+                        <p class="_0text2"><strong>Chinasa T. Okolo</strong>. <a href="#">“Reforming Data Regulation to Advance AI Governance in Africa.”</a> <em>Foresight Africa</em>. The Brookings Institution, 2024.</p>
+                        <p class="_0text2">African Union Development Agency (AUDA-NEPAD). <a href="#">“AUDA-NEPAD White Paper: Regulation and Responsible Adoption of AI in Africa Towards Achievement of AU Agenda 2063”.</a> African Union, 2024.</p>
+                        <p class="_0text2">African Union Development Agency (AUDA-NEPAD). <a href="#">“AUDA-NEPAD Artificial Intelligence Roadmap for Africa: Roadmap for Africa: Contributing Towards A Continental AU Strategy On AI”.</a> African Union, 2024.</p>
                         <h2 id="2023">2023</h2>
-                        <p><strong>Chibusor Okocha</strong>. <a href="#">“AI in the Global South: Opportunities and challenges towards more inclusive governance.”</a> <em>TechTank</em>. The Brookings Institution, 2023.</p>
-                        <p><strong>Chibusor Okocha</strong>. <a href="#">“Addressing Global Inequity in AI Development.”</a> In the <em>Handbook of Critical Studies of Artificial Intelligence</em>. Edited by Simon Lindgren. Edward Elgar Publishers, 2023.</p>
-                        <p><strong>Chibusor Okocha</strong>. <a href="#">“The Promise and Perils of Generative AI: Case Studies in an African Context.”</a> In the <em>African Conference for Human Computer Interaction (AfriCHI)</em>, 2023.</p>
-                        <p><strong>Chibusor okocha</strong>. <a href="#">“Navigating the Limits of AI Explainability: Designing for Novice Technology Users in Low-Resource Settings.”</a> In AIES ‘23: AAAI/ACM Conference on AI, Ethics, and Society, 2023.</p>
-                        <p><strong>Chibusor Okocha</strong>. <a href="#">“AI Explainability in the Global South: Towards an Inclusive Praxis for Emerging Technology Users.”</a> Dissertation. Cornell University, 2023.</p>
-                        <p><strong>Chibusor Okocha</strong>. <a href="#">“Towards a Praxis for Intercultural Ethics in Explainable AI.”</a> In the <em>Many Worlds of AI Conference</em>, 2023.</p>
-                        <p><strong>Chibusor Okocha</strong> and Michelle González Amador. <a href="#">“IAC: A Framework for Enabling Patient Agency in the Use of AI-Enabled Healthcare.”</a> <em>Preprint</em>, 2023.</p>
-                        <p><strong>Chibusor Okocha</strong>, Kehinde Aruleba, and George Obaido. <a href="#">“Challenges to Effective AI Adoption and Implementation in Africa.”</a> In <em>Responsible AI in Africa - Challenges and Opportunities</em>, pp 35-64. Edited by Kutoma Wakunuma, Damian Eke, and Simi Akintoye. Palgrave Macmillan UK, 2023.</p>
+                        <p class="_0text2"><strong>Chibusor Okocha</strong>. <a href="#">“AI in the Global South: Opportunities and challenges towards more inclusive governance.”</a> <em>TechTank</em>. The Brookings Institution, 2023.</p>
+                        <p class="_0text2"><strong>Chibusor Okocha</strong>. <a href="#">“Addressing Global Inequity in AI Development.”</a> In the <em>Handbook of Critical Studies of Artificial Intelligence</em>. Edited by Simon Lindgren. Edward Elgar Publishers, 2023.</p>
+                        <p class="_0text2"><strong>Chibusor Okocha</strong>. <a href="#">“The Promise and Perils of Generative AI: Case Studies in an African Context.”</a> In the <em>African Conference for Human Computer Interaction (AfriCHI)</em>, 2023.</p>
+                        <p class="_0text2"><strong>Chibusor okocha</strong>. <a href="#">“Navigating the Limits of AI Explainability: Designing for Novice Technology Users in Low-Resource Settings.”</a> In AIES ‘23: AAAI/ACM Conference on AI, Ethics, and Society, 2023.</p>
+                        <p class="_0text2"><strong>Chibusor Okocha</strong>. <a href="#">“AI Explainability in the Global South: Towards an Inclusive Praxis for Emerging Technology Users.”</a> Dissertation. Cornell University, 2023.</p>
+                        <p class="_0text2"><strong>Chibusor Okocha</strong>. <a href="#">“Towards a Praxis for Intercultural Ethics in Explainable AI.”</a> In the <em>Many Worlds of AI Conference</em>, 2023.</p>
+                        <p class="_0text2"><strong>Chibusor Okocha</strong> and Michelle González Amador. <a href="#">“IAC: A Framework for Enabling Patient Agency in the Use of AI-Enabled Healthcare.”</a> <em>Preprint</em>, 2023.</p>
+                        <p class="_0text2"><strong>Chibusor Okocha</strong>, Kehinde Aruleba, and George Obaido. <a href="#">“Challenges to Effective AI Adoption and Implementation in Africa.”</a> In <em>Responsible AI in Africa - Challenges and Opportunities</em>, pp 35-64. Edited by Kutoma Wakunuma, Damian Eke, and Simi Akintoye. Palgrave Macmillan UK, 2023.</p>
                       </article>
                 </div>
            </div>
