--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                   </div>
                 <div class="ms-2">
                   <h6 style="line-height: 1em;">Chibuzor Okocha</h6>
-                  <p class="fs-5 _0text1">Human-centered AI Researcher and AI Governance Expert</p>
+                  <p class="fs-5 _0text1">Human-centered AI Researcher, machine Translation and accent Transfer in Education and AI in Education</p>
                   <!-- <span class="fw-bold mt-3">Chibusor Okocha</span> -->
                 </div>
                 <div class="">
